# flox

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: app.yaml  basic.py  example.py  flox.yaml  register_logger.py
examples/basic/: app.yaml  basic.py
examples/basic/projectA/: backends.yaml  documents.yaml  grox.yaml  models.yaml
examples/logger/: register_logger.py
examples/projectA/: backends.yaml  glox.yaml  grox.yaml  models.yaml
flox/: __init__.py  cli.py  config.py  context.py  flox.py  logger.py  projects.py
flox/templates/: flox.yaml.j2  main.py.j2
grox/: __init__.py  cli.py  config.py  context.py  factory.py  factory_cache.py  grox.py  logger.py  project.py  state.py
grox/backends/: common.py  memory.py  redis.py  redis_async.py  redis_factory.py
grox/documents/: __init__.py  retrieval.py  schema.py  store.py
grox/templates/: main.py.j2
tests/: graph_builder.py  test_context_threading.py  test_flox_context_threading.py
